updated 'Get Started' link

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -12,7 +12,7 @@
         <h1>Internet of Things Data Service Platform</h1>
         <p>A federated cloud platform for mobile data-centric service development and sharing.</p>
         <!-- TODO -->
-        <a class="btn btn-lg btn-default" href="/">Get Started &raquo;</a>
+        <a class="btn btn-lg btn-default" href="https://docs.google.com/presentation/d/1ztigmHvM5j7rsqMgI_AVu1gPimV7OJm8LLSFc03TRcs/pub?start=false&loop=false&delayms=3000">Get Started &raquo;</a>
       </div>
     </div>
   </div>
